Fixed search bar - aligned search bar on top of nav items - override active elements - consistent padding on navbar transition - ensure input overflow doesn't intersect with icon

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -17,6 +17,11 @@ body {
 /* -------------- *
  * Nav Bar
  * -------------- */
+.navbar {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .navbar-nav .nav-link {
     border-radius: 10px;
     padding: 8px 20px;
@@ -51,46 +56,6 @@ body {
     background-color: #E0E0E0;
 }
 
-@media (min-width: 1200px) {
-    .navbar {
-        position: fixed;
-        align-items: flex-start;
-        width: 200px;
-        height: 100%;
-        padding: 10px 0px;
-        overflow-y: auto;
-    }
-
-    .navbar::-webkit-scrollbar {
-        display: none;
-    }
-
-    .navbar-expand .navbar-collapse {
-        display: block !important;
-    }
-
-    .navbar-expand .navbar-nav {
-        flex-direction: column;
-    }
-
-    .navbar-nav .nav-item {
-        margin-right: 0px;
-    }
-
-    .navbar-expand .navbar-nav .nav-link {
-        padding: 8px 20px;
-    }
-
-    .navbar-expand .container-fluid {
-        padding: 0px 15px;
-    }
-      
-    .container {
-        margin-left: 225px;
-        max-width: calc(100% - 250px);
-    }
-}
-
 /* -------------- *
  * Search
  * -------------- */
@@ -101,20 +66,22 @@ body {
 
 .search-input {
     width: 0;
-    height: 40px;
+    height: 50px;
     padding: 0 20px;
     border-radius: 10px;
     border: 2px solid grey;
     transition: width 0.4s ease, opacity 0.4s ease;
     opacity: 0;
-    text-indent: 10%;
     pointer-events: none;
+    font-size: 1.25rem;
 }
 
 .search-container.active .search-input {
     width: 200px;
     opacity: 1;
     pointer-events: auto;
+    padding-left: 40px;
+    padding-right: 10px;
 }
 
 .search-input:focus {
@@ -130,7 +97,7 @@ body {
 }
 
 .search-icon i {
-    padding: 10px;
+    padding: 12.5px;
     border-radius: 10px;
     border: 2px solid transparent;
     font-size: 1.25rem;
@@ -191,5 +158,67 @@ body {
 @media (max-width: 991.98px) {
     .card {
         height: 150px;
+    }
+}
+
+/* -------------- *
+ * Nav Bar Wide
+ * -------------- */
+@media (min-width: 1200px) {
+    .navbar {
+        position: fixed;
+        align-items: flex-start;
+        width: 230px;
+        height: 100%;
+        padding: 10px 0px;
+        overflow-y: auto;
+    }
+
+    .navbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .navbar-expand .navbar-collapse {
+        display: block !important;
+    }
+
+    .navbar-expand .navbar-nav {
+        flex-direction: column;
+    }
+
+    .navbar-nav .nav-item {
+        margin-right: 0px;
+    }
+
+    .navbar-expand .navbar-nav .nav-link {
+        padding: 8px 20px;
+    }
+
+    .navbar-expand .container-fluid {
+        padding: 0px 16px;
+        flex-wrap: wrap;
+    }
+      
+    .container {
+        margin-left: 250px;
+        max-width: calc(100% - 270px);
+    }
+
+    .search-container {
+        margin-right: 0px;
+        margin-bottom: 10px;
+        pointer-events: none;
+    }
+
+    .search-input {
+        padding-left: 40px;
+        padding-right: 10px;
+    }
+
+    .search-container .search-input, .search-container.active .search-input {
+        width: 200px;
+        opacity: 1;
+        pointer-events: auto;
+        transition: none;
     }
 }
